Writing through news summaries

--- a/2025/2025-08-31-wir.md
+++ b/2025/2025-08-31-wir.md
@@ -102,17 +102,27 @@ https://www.washingtonpost.com/business/2025/08/25/burger-king-worker-nykia-hami
 
 ### Looking Ahead
 
-- **A congressman in the Phillipines** has introduced a bill proposing the country build a bitcoin reserve holding 10,000 tokens. ([Cryptonews](https://finance.yahoo.com/news/philippines-proposes-massive-10-000-172644985.html))
+**The Wall Stret Journal's David Luhnow and Tom Fairless** recently published a [fascinating deep dive](https://www.wsj.com/world/europe/europe-is-losing-fe179376?st=XeCdCn&reflink=desktopwebshare_permalink) about Europe's economic competitiveness and innovation. 
+
+Like many journalists who have previously tackled this topic, they describe the region as less dynamic in many respects than America or other rivals. But they did include some details I found really really surprising like this one about space exploration: 
+
+*"On May 13, Elon Musk’s SpaceX launched 28 satellites into orbit in a single day, one of over 100 successful U.S. orbital launches this year. China has sent more than 40 rockets into space since January. Russia, bogged down by war in Ukraine, has launched 10 rockets."* 
+
+*"Europe, by contrast, has launched four."*
+
+Ouch.
+
+Some other notable tech stories to watch:
+
+- **A congressman in the Phillipines** has introduced a bill proposing creation of a national bitcoin reserve holding 10,000 tokens. ([Cryptonews](https://finance.yahoo.com/news/philippines-proposes-massive-10-000-172644985.html))
 
 - **Startups are racing to develop new batteries** using materials like sodium and sulfur as an alternative to the dominant lithium-ion devices that power electric vehicles and other electronics. The goal is to lower costs and reduce reliance on China, which dominates the lithium-ion market. ([Reuters](https://news.google.com/read/CBMitgFBVV95cUxPT2hWaEFkZDhnQy16YjJpZFFVSklTMXNLVW51VFdDSC05OU9FYURXNUZ6Z2hNc3V2Q2h5elJQODJFemthWFJ2ZV8taV9mWVlQd3RhZFMtTEtmN2JOS0UyV21FMDRBWnl5bnVEOGUxQWJXMjBoOUozWktramt1bTlaeDdGQXZYRV9sMG9WZ3lxSzNlQUhNU0RoQ1lRMC1xNF9vZG9WS0J1RHE0SlRmZnpSN2w5MjVfdw?hl=en-US&gl=US&ceid=US%3Aen))
 
-- WSJ article on Euorpean competitiveness and innovation, including an eye-popping factoid related to space exploration. ([Wall Street Journal](https://www.wsj.com/world/europe/europe-is-losing-fe179376?st=XeCdCn&reflink=desktopwebshare_permalink))
-
 ### Odds & Ends
 
-- Fallingwater, a UNESCO World Heritage site and iconic masterpiece designed by Frank Lloyd Wright, is undergoing a $7 million renovation to replace roofs, repair walls, and restore windows, while adhering to strict historic preservation standards. The project aims to eliminate water infiltration challenges and preserve the home's delicate ecosystem, with renovations scheduled to be completed by spring 2026. ([Washington Post](https://wapo.st/4mJ4XeM)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Fallingwater has leaks to fix.** Frank Lloyd Wright's architectural masterpiece is undergoing a $7 million renovation, with painstaking attention to preserving important historical elements. ([Washington Post](https://wapo.st/4mJ4XeM)) 
 
-- A 69-year-old man named George Herman Ruth, who shares the same name as baseball legend Babe Ruth, has been charged with 91 counts of mail fraud, identity theft, and other crimes in Tennessee. He allegedly used the names of hundreds of deceased or retired baseball players to submit fraudulent claims for payouts in class action settlements, obtaining over $550,000 through the scheme. ([New York Post](https://nypost.com/2025/08/26/sports/babe-ruth-arrested-for-using-baseball-legends-names-in-fraud-scheme/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **For once, a crypto-free fraud case:** A Tennessee man has been charged with 91 counts of mail fraud, identity theft, and other crimes for impersonating baseball legend Babe Ruth and other deceased or retired players in submitting false claims in class-action lawsuit settlements. How quaint. ([New York Post](https://nypost.com/2025/08/26/sports/babe-ruth-arrested-for-using-baseball-legends-names-in-fraud-scheme/)) 
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
