Writing through news summaries

--- a/2025/2025-08-31-wir.md
+++ b/2025/2025-08-31-wir.md
@@ -36,15 +36,19 @@ https://www.washingtonpost.com/business/2025/08/25/burger-king-worker-nykia-hami
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
+- **The nonprofit A New Social launched** a public beta version of [Bounce](https://bounce.anew.social/?ref=w3wnews.substack.com), a tool for migrating a user's Bluesky account to Mastodon or Pixelfed, including follower lists and posts. Over time, advocates of the open, social sites known collectively as [the "fediverse"](https://en.wikipedia.org/wiki/Fediverse) hope such functionality can become [an important advantage](https://techcrunch.com/2025/08/25/bounce-launches-a-service-for-moving-accounts-between-bluesky-and-mastodon/) to attract users. By comparison, centralized incumbents like Instagram and Twitter tend to be highly reticent to allow users to move their data from one service to another.
+
+- **Tether announced plans** to launch its USDT stablecoin on RGB, a next-generation protocol for issuing digital assets on the Bitcoin network. The move could be an important one for professional crypto traders, who often use USDT to collateralize leveraged positions in the BTC token. ([Cryptonews](https://cryptonews.com/news/tether-stablecoin-usdt-coming-to-bitcoin-blockchain/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- **Chainlink has launched** a new set of feeds that deliver official U.S. Department of Commerce macroeconomic data on gross domestic product, inflation, and other indicators directly to multiple blockchains.([Blockworks](https://blockworks.co/news/chainlink-labs-commerce))
+
 - Nvidia's revenue saw significant growth, reaching $46.7 billion with a 56% increase from last year, driven by the booming AI economy. However, the company's sales forecast for the third quarter fell short of expectations, with a disappointing $54 billion projection, largely due to a halt in H20 chip sales to China amid ongoing trade tensions. ([Axios](https://www.axios.com/2025/08/27/nvidia-earnings-revenue-jensen-huang)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 - Elon Musk's xAI has filed an antitrust lawsuit against Apple and OpenAI, alleging that the two companies are teaming up to stifle competition in the artificial intelligence market by favoring OpenAI's ChatGPT over other AI apps. The lawsuit claims that Apple's partnership with OpenAI has given the company an unfair advantage, allowing it to collect valuable data from iPhone users and potentially threatening the future of the iPhone. ([Associated Press](https://apnews.com/article/elon-musk-apple-openai-chatgpt-8cc360bd419894ad8c6bfdd79eb5693f)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- Tether, the world's largest digital asset company, has announced plans to launch its USDT stablecoin on RGB, a next-generation protocol for issuing digital assets on Bitcoin, allowing for private, scalable, and user-controlled issuance of assets. This move aims to make USDT a native, lightweight, private, and scalable payment option on Bitcoin, reinforcing Tether's belief in Bitcoin as the foundation of a global, decentralized financial system. ([Cryptonews](https://cryptonews.com/news/tether-stablecoin-usdt-coming-to-bitcoin-blockchain/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- Chainlink has launched a new set of data feeds that deliver official U.S. Department of Commerce macroeconomic statistics directly to blockchains, expanding its role as a provider of verifiable data feeds. This integration, in collaboration with Pyth Network, makes government-released indicators such as GDP and the PCE Price Index available on-chain through decentralized oracle networks, spanning ten blockchains.([Blockworks](https://blockworks.co/news/chainlink-labs-commerce)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- If you’ve ever wanted to hop between decentralized networks without losing followers, a new tool called Bounce just made it possible. It connects Bluesky and Mastodon accounts, smoothing over one of the biggest frictions in the Fediverse. ([TechCrunch](https://techcrunch.com/2025/08/25/bounce-launches-a-service-for-moving-accounts-between-bluesky-and-mastodon/)) <!-- Draft news summary by ChatGPT -->
+
 
 ### Market Snapshot
 
@@ -102,13 +106,13 @@ https://www.washingtonpost.com/business/2025/08/25/burger-king-worker-nykia-hami
 
 ### Looking Ahead
 
-**The Wall Stret Journal's David Luhnow and Tom Fairless** recently published a [fascinating deep dive](https://www.wsj.com/world/europe/europe-is-losing-fe179376?st=XeCdCn&reflink=desktopwebshare_permalink) about Europe's economic competitiveness and innovation. 
+**The Wall Stret Journal's David Luhnow and Tom Fairless** recently published a [fascinating deep dive](https://www.wsj.com/world/europe/europe-is-losing-fe179376?st=XeCdCn&reflink=desktopwebshare_permalink) about Europe's economic competitiveness and innovation.
 
-Like many journalists who have previously tackled this topic, they describe the region as less dynamic in many respects than America or other rivals. But they did include some details I found really really surprising like this one about space exploration: 
+Like many journalists who have previously tackled this topic, they describe the region as less dynamic in many respects than America or other rivals. But they did include some details I found really really surprising like this one about space exploration:
 
-*"On May 13, Elon Musk’s SpaceX launched 28 satellites into orbit in a single day, one of over 100 successful U.S. orbital launches this year. China has sent more than 40 rockets into space since January. Russia, bogged down by war in Ukraine, has launched 10 rockets."* 
-
-*"Europe, by contrast, has launched four."*
+>*"On May 13, Elon Musk’s SpaceX launched 28 satellites into orbit in a single day, one of over 100 successful U.S. orbital launches this year. China has sent more than 40 rockets into space since January. Russia, bogged down by war in Ukraine, has launched 10 rockets."*
+>
+>*"Europe, by contrast, has launched four."*
 
 Ouch.
 
@@ -120,9 +124,9 @@ Some other notable tech stories to watch:
 
 ### Odds & Ends
 
-- **Fallingwater has leaks to fix.** Frank Lloyd Wright's architectural masterpiece is undergoing a $7 million renovation, with painstaking attention to preserving important historical elements. ([Washington Post](https://wapo.st/4mJ4XeM)) 
+- **Fallingwater has leaks to fix.** Frank Lloyd Wright's architectural masterpiece is undergoing a $7 million renovation, with painstaking attention to preserving important historical elements. ([Washington Post](https://wapo.st/4mJ4XeM))
 
-- **For once, a crypto-free fraud case:** A Tennessee man has been charged with 91 counts of mail fraud, identity theft, and other crimes for impersonating baseball legend Babe Ruth and other deceased or retired players in submitting false claims in class-action lawsuit settlements. How quaint. ([New York Post](https://nypost.com/2025/08/26/sports/babe-ruth-arrested-for-using-baseball-legends-names-in-fraud-scheme/)) 
+- **For once, a crypto-free fraud case:** A Tennessee man has been charged with 91 counts of mail fraud, identity theft, and other crimes for impersonating baseball legend Babe Ruth and other deceased or retired players in submitting false claims in class-action lawsuit settlements. How quaint. ([New York Post](https://nypost.com/2025/08/26/sports/babe-ruth-arrested-for-using-baseball-legends-names-in-fraud-scheme/))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
