--- a/2025/2025-08-31-wir.md
+++ b/2025/2025-08-31-wir.md
@@ -36,19 +36,15 @@ https://www.washingtonpost.com/business/2025/08/25/burger-king-worker-nykia-hami
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
+- **Crypto and stocks stumbled** late in the week on fears about the U.S. economy and the outlook for AI. Bitcoin fell below $110,000, nearing [a two-month low](https://cointelegraph.com/news/bitcoin-risks-dollar100k-crash-as-us-china-economic-woes-take-hold). And chipmaker Nvidia's shares fell more than 3% Friday after issuing a mixed earnings report including a third-quarter sales forecast that missed analysts' expectations. Since Nvidia has been the market leader in selling components for AI devices, its results [sparked broader fears](https://www.axios.com/2025/08/27/nvidia-earnings-revenue-jensen-huang) that the recent boom in the entire AI sector might have gotten ahead of the technology's limitations for now.
+
 - **The nonprofit A New Social launched** a public beta version of [Bounce](https://bounce.anew.social/?ref=w3wnews.substack.com), a tool for migrating a user's Bluesky account to Mastodon or Pixelfed, including follower lists and posts. Over time, advocates of the open, social sites known collectively as [the "fediverse"](https://en.wikipedia.org/wiki/Fediverse) hope such functionality can become [an important advantage](https://techcrunch.com/2025/08/25/bounce-launches-a-service-for-moving-accounts-between-bluesky-and-mastodon/) to attract users. By comparison, centralized incumbents like Instagram and Twitter tend to be highly reticent to allow users to move their data from one service to another.
 
-- **Tether announced plans** to launch its USDT stablecoin on RGB, a next-generation protocol for issuing digital assets on the Bitcoin network. The move could be an important one for professional crypto traders, who often use USDT to collateralize leveraged positions in the BTC token. ([Cryptonews](https://cryptonews.com/news/tether-stablecoin-usdt-coming-to-bitcoin-blockchain/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Tether announced plans** to launch its USDT stablecoin on RGB, a protocol for issuing digital assets on the Bitcoin network. The move could prove particularly useful for pro crypto traders, who often use USDT to finance leveraged positions in the BTC token. ([Cryptonews](https://cryptonews.com/news/tether-stablecoin-usdt-coming-to-bitcoin-blockchain/))
 
-- **Chainlink has launched** a new set of feeds that deliver official U.S. Department of Commerce macroeconomic data on gross domestic product, inflation, and other indicators directly to multiple blockchains.([Blockworks](https://blockworks.co/news/chainlink-labs-commerce))
+- **Chainlink introduced** a new set of data feeds to publish U.S. Department of Commerce economic data across ten different blockchains. ([Blockworks](https://blockworks.co/news/chainlink-labs-commerce))
 
-- Nvidia's revenue saw significant growth, reaching $46.7 billion with a 56% increase from last year, driven by the booming AI economy. However, the company's sales forecast for the third quarter fell short of expectations, with a disappointing $54 billion projection, largely due to a halt in H20 chip sales to China amid ongoing trade tensions. ([Axios](https://www.axios.com/2025/08/27/nvidia-earnings-revenue-jensen-huang)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- Elon Musk's xAI has filed an antitrust lawsuit against Apple and OpenAI, alleging that the two companies are teaming up to stifle competition in the artificial intelligence market by favoring OpenAI's ChatGPT over other AI apps. The lawsuit claims that Apple's partnership with OpenAI has given the company an unfair advantage, allowing it to collect valuable data from iPhone users and potentially threatening the future of the iPhone. ([Associated Press](https://apnews.com/article/elon-musk-apple-openai-chatgpt-8cc360bd419894ad8c6bfdd79eb5693f)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-
-
-
+- **Elon Musk's startup xAI filed an antitrust suit** against Apple and OpenAI, alleging that the two companies are teaming up to stifle competition in artificial intelligence. Musk claims Apple's partnership with OpenAI has given OpenAI an unfair advantage, including preferable treatment in its mobile App Store for OpenAI's ChatGPT app over xAI's Grok. ([AP](https://apnews.com/article/elon-musk-apple-openai-chatgpt-8cc360bd419894ad8c6bfdd79eb5693f))
 
 ### Market Snapshot
 
@@ -68,37 +64,39 @@ https://www.washingtonpost.com/business/2025/08/25/burger-king-worker-nykia-hami
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td>$</td>
-     <td>-%</td>
-     <td>+%</td>
+     <td>$107,906.68</td>
+     <td>-7.6%</td>
+     <td>+15%</td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td></td>
-     <td>-%</td>
-     <td>+%</td>
+     <td>23,415.42</td>
+     <td>-0.4%</td>
+     <td>+11.4%</td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td>$/oz</td>
-     <td>+%</td>
-     <td>+%</td>
+     <td>$3,516.10/oz</td>
+     <td>+2.9%</td>
+     <td>+33.7%</td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td></td>
-     <td>-%</td>
-     <td>-%</td>
+     <td>97.86</td>
+     <td>+0.1%%</td>
+     <td>-9.8%</td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td>%</td>
-     <td>-</td>
-     <td>-</td>
+     <td>4.227%</td>
+     <td>-0.033</td>
+     <td>-0.346</td>
+
+
    </tr>
 
 </tbody>
@@ -106,9 +104,9 @@ https://www.washingtonpost.com/business/2025/08/25/burger-king-worker-nykia-hami
 
 ### Looking Ahead
 
-**The Wall Stret Journal's David Luhnow and Tom Fairless** recently published a [fascinating deep dive](https://www.wsj.com/world/europe/europe-is-losing-fe179376?st=XeCdCn&reflink=desktopwebshare_permalink) about Europe's economic competitiveness and innovation.
+**The Wall Stret Journal's David Luhnow and Tom Fairless** recently published a [fascinating deep dive](https://www.wsj.com/world/europe/europe-is-losing-fe179376?st=XeCdCn&reflink=desktopwebshare_permalink) about Europe's economic competitiveness and innovation. Like many journalists who have previously tackled this topic, they describe the region as less dynamic in many respects than America or China.
 
-Like many journalists who have previously tackled this topic, they describe the region as less dynamic in many respects than America or other rivals. But they did include some details I found really really surprising like this one about space exploration:
+That said, the Journal's coverage did add certain details to the narrative that I found truly surprising, like this one about space exploration:
 
 >*"On May 13, Elon Musk’s SpaceX launched 28 satellites into orbit in a single day, one of over 100 successful U.S. orbital launches this year. China has sent more than 40 rockets into space since January. Russia, bogged down by war in Ukraine, has launched 10 rockets."*
 >
@@ -116,7 +114,7 @@ Like many journalists who have previously tackled this topic, they describe the 
 
 Ouch.
 
-Some other notable tech stories to watch:
+Other developing tech stories to watch:
 
 - **A congressman in the Phillipines** has introduced a bill proposing creation of a national bitcoin reserve holding 10,000 tokens. ([Cryptonews](https://finance.yahoo.com/news/philippines-proposes-massive-10-000-172644985.html))
 
