Writing through lead item

--- a/2025/2025-08-31-wir.md
+++ b/2025/2025-08-31-wir.md
@@ -14,23 +14,37 @@
 
 <hr>
 
-**Lead item goes here.** yadda yadda yadda.
+**Perhaps the most burning question about AI** is what effect it will have on employment.
 
-<!-- Riff on AI's potential effect on employment using an ad-hoc pro/con -->
+The consensus among AI startups and venture investors seems to be that the tech will soon be sufficiently awesome to put [millions of humans](https://www.analyticsinsight.net/news/sam-altman-issues-ai-warning-millions-of-jobs-are-at-risk) out of work. They often predict this will inflict dire consequences on the broader society that someone (else) should immediately [start working to mitigate](https://www.axios.com/2025/05/28/ai-jobs-white-collar-unemployment-anthropic).
 
-- **Marketing guru Seth Godin** is [optimistic](https://seths.blog/2025/08/job-churn/) about AI's potential effect on employment.
+But hey. Maybe the startup guys are biased.
 
-- <!-- TK rant-y link from HR recruiter guy on "psychotic" corporations. Part about AI starts about 12-13 mins in. --> https://www.youtube.com/watch?v=T1WAq2xoLfE&t=908s
+Last week I came across two independent takes that apply a very different sort of logic. The two ultimately arrive at opposite predictions on employment, but they both do so by wrestling with a very compelling question I don't often hear asked:
 
-Signs of the psychosis...
+What if the technical sophistication of AI software and its impact on unemployment are separate matters, variables that can move inversely or independently to one another rather than in some direct relationship?
 
-- Employee who ran an SC Burger King solo gets fired because she couldn't line up child care.
-https://www.washingtonpost.com/business/2025/08/25/burger-king-worker-nykia-hamilton-fired-childcare/
+On his blog, author and marketing guru Seth Godin said [he's optimistic](https://seths.blog/2025/08/job-churn/) about AI's long-term impact on jobs. He essentially believes the technical advances will happen as advertised. But he also expects humans to adapt adequately.
 
-- Google has eliminated 35% of managers of small teams: https://www.cnbc.com/2025/08/27/google-executive-says-company-has-cut-a-third-of-its-managers.html
+Godin expects adaptation to create unanticipated new categories of employment that replace old ones, in a pattern that's been present going back to the very earliest days of tech-driven industrialization.
 
-<!-- Perhaps end with note that these guys are both tech-savvy in their way, but they're not engineers. -->
+"It’s entirely possible that a magical AI will replace every single human job and then destroy the Earth," he writes. "But it’s far more likely that the pattern of the last five hundred years will continue."
 
+Bryan Creely, a former corporate recruiter turned career coach, is much less sanguine in a recent self-described ["rant"](https://www.youtube.com/watch?v=T1WAq2xoLfE) on his YouTube channel. In making a broad-based critique of many companies' "psychotic" practices around hiring and layoffs the last several years, Creely touches on AI just shy of the video's 13-minute mark.
+
+He sounds mostly agnostic about technical advances. Yes, they'll inevitably happen, but Creely doesn't necessarily expect some of the ills we're already seeing, like [AI slop](https://www.npr.org/2025/08/28/nx-s1-5493485/ai-slop-videos-youtube-tiktok) on social networks, to improve.
+
+For Creely, that's also mostly beside the point. He's more concerned about companies' anti-employee, ruthlessly bottom line-driven tendencies. Those dynamics existed well before the current AI boom started, of course. *But they are crucial context in which executives' decisions about AI will be made going forward.*
+
+In that light, if the tech is merely "good enough" (though still deeply flawed) and saves them money, what do you think managers will do regarding staffing levels? Protect people for the sake of quality control in their companies' products and services?
+
+They already haven't been doing that in many other respects. Why would they do it regarding AI?
+
+In this view, the next step for AI could be to become a vehicle for what author Cory Doctorow calls [enshittification](https://en.wikipedia.org/wiki/Enshittification#cite_note-BlogCoinage2022-6) at grand scale throughout the global economy, thus a big negative to employment.
+
+AI probably doesn't have to become sentient or make great technial leaps to do this. The only real requirement is the presence of human greed, which is already plentiful.
+
+You can probably tell, I lean toward Creely's outlook myself right now. But who knows? In my heart, I would really, really like to get where Godin is somehow.
 
 ### Five Things: Aug. 24-30, 2025
 
