Adding final headline + subhed, with drafting help from ChatGPT

--- a/2025/2025-08-31-wir.md
+++ b/2025/2025-08-31-wir.md
@@ -1,5 +1,5 @@
-# TKTK
-## TKTK
+# AI's impact on jobs won't be just about the tech
+## Whether new tools help or harm human workers may depend less on the software itself and more on who's in charge.
 
 ![Stock photo of a man walking by a sign reading "no jobs"](https://w3w.news/img/hennie-stander-unsplash-3000.jpg)
 *Photo by [Hennie Stander](https://unsplash.com/@henniestander) via Unsplash.*
