Making some copyedits suggested by Copilot

--- a/2025/2025-08-31-wir.md
+++ b/2025/2025-08-31-wir.md
@@ -42,7 +42,7 @@ They already haven't been doing that in many other respects. Why would they do i
 
 In this view, the next step for AI could be to become a vehicle for what author Cory Doctorow calls [enshittification](https://en.wikipedia.org/wiki/Enshittification#cite_note-BlogCoinage2022-6) at grand scale throughout the global economy, thus a big negative to employment.
 
-AI probably doesn't have to become sentient or make great technial leaps to do this. The only real requirement is the presence of human greed, which is already plentiful.
+AI probably doesn't have to become sentient or make great technical leaps to do this. The only real requirement is the presence of human greed, which is already plentiful.
 
 You can probably tell, I lean toward Creely's outlook myself right now. But who knows? In my heart, I would really, really like to get where Godin is somehow.
 
@@ -100,7 +100,7 @@ You can probably tell, I lean toward Creely's outlook myself right now. But who 
    <tr>
      <td>USD Index</td>
      <td>97.86</td>
-     <td>+0.1%%</td>
+     <td>+0.1%</td>
      <td>-9.8%</td>
    </tr>
 
@@ -118,7 +118,7 @@ You can probably tell, I lean toward Creely's outlook myself right now. But who 
 
 ### Looking Ahead
 
-**The Wall Stret Journal's David Luhnow and Tom Fairless** recently published a [fascinating deep dive](https://www.wsj.com/world/europe/europe-is-losing-fe179376?st=XeCdCn&reflink=desktopwebshare_permalink) about Europe's economic competitiveness and innovation. Like many journalists who have previously tackled this topic, they describe the region as less dynamic in many respects than America or China.
+**The Wall Street Journal's David Luhnow and Tom Fairless** recently published a [fascinating deep dive](https://www.wsj.com/world/europe/europe-is-losing-fe179376?st=XeCdCn&reflink=desktopwebshare_permalink) about Europe's economic competitiveness and innovation. Like many journalists who have previously tackled this topic, they describe the region as less dynamic in many respects than America or China.
 
 That said, the Journal's coverage did add certain details to the narrative that I found truly surprising, like this one about space exploration:
 
@@ -130,7 +130,7 @@ Ouch.
 
 Other developing tech stories to watch:
 
-- **A congressman in the Phillipines** has introduced a bill proposing creation of a national bitcoin reserve holding 10,000 tokens. ([Cryptonews](https://finance.yahoo.com/news/philippines-proposes-massive-10-000-172644985.html))
+- **A congressman in the Philippines** has introduced a bill proposing creation of a national bitcoin reserve holding 10,000 tokens. ([Cryptonews](https://finance.yahoo.com/news/philippines-proposes-massive-10-000-172644985.html))
 
 - **Startups are racing to develop new batteries** using materials like sodium and sulfur as an alternative to the dominant lithium-ion devices that power electric vehicles and other electronics. The goal is to lower costs and reduce reliance on China, which dominates the lithium-ion market. ([Reuters](https://news.google.com/read/CBMitgFBVV95cUxPT2hWaEFkZDhnQy16YjJpZFFVSklTMXNLVW51VFdDSC05OU9FYURXNUZ6Z2hNc3V2Q2h5elJQODJFemthWFJ2ZV8taV9mWVlQd3RhZFMtTEtmN2JOS0UyV21FMDRBWnl5bnVEOGUxQWJXMjBoOUozWktramt1bTlaeDdGQXZYRV9sMG9WZ3lxSzNlQUhNU0RoQ1lRMC1xNF9vZG9WS0J1RHE0SlRmZnpSN2w5MjVfdw?hl=en-US&gl=US&ceid=US%3Aen))
 
