--- a/2025/2025-09-07-wir.md
+++ b/2025/2025-09-07-wir.md
@@ -20,15 +20,25 @@
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
+- WLFI token debuts. <!--Link TK --> | Bloomberg says Trump family made $1.3B on crypto in just a few weeks: https://news.google.com/read/CBMitAFBVV95cUxPVnNqUzRXb2k1OTc5a25xemlhRV81NFdiSTNSZVpjRkY5b2cweGl3cEs1S3NGR2tQSDQ4dXduc1pvMzFuX0dpTWN6a3JfVmJsQlBCYTVwYWItTDhsRk4xcXNZbEU1ZUZwVWZsTVZGTlAyV3Q2WmVoTVV4N1N5TkFybDQ2Y0RZVlFyNU9GNFVfZVM4RkFXcEViekZBMHdTQVd3TjNmYm1Xb2MxYlM3SFl6eERROTk?hl=en-US&gl=US&ceid=US%3Aen | Sun says his WLFI tokens are being frozen: https://news.google.com/read/CBMifEFVX3lxTE5majlndzFhQXEyVVVWMU9SNmpMMU5ibUoxaUNLNEk3VkZSTVZpazh5VmxOOWcweWFlOE9qZDBUM2JZcjYtYXRGczVhRndGOWo2bUhZdTY2NUNMcF9ndXA2SGYxckJaRDF2SDdFZ0JZWFM4V1dFd20wMnRhbzA?hl=en-US&gl=US&ceid=US%3Aen | Trump Media buying CRO tokens: https://www.theblock.co/post/369646/trump-media-closes-deal-to-buy-684-million-cro-tokens
+
 - WSJ: Stock market is now as expensive relative to companies' actual sales as it was in the first dotcom bubble. <!--Link TK -->
 
-- Anthropic IPO <!--Link TK --> | Gemini IPO <!--Link TK -->
+- S&P adds Robinhood, not Strategy, to the 500. Hmmm... https://decrypt.co/338344/robinhood-set-to-join-sp-500-as-bitcoin-giant-strategy-misses-out
 
-- WLFI token debuts. <!--Link TK -->
+- Stablecoin transfers hit a record in August: https://finance.yahoo.com/news/stablecoin-retail-transfers-break-records-120000887.html | Tether looking to add gold to its books. https://www.theblock.co/post/369668/tether-weighing-gold-investment-surprises-mining-execs
 
-- TK
+- Polymarket hits ATH, eyes return to the U.S. https://www.theblock.co/post/369682/polymarket-hits-all-time-high-for-new-markets-created-as-platform-eyes-us-return
 
-- TK
+- Anthropic raises a round and settles a lawsuit with book authors:  https://www.theverge.com/anthropic/769179/anthropic-is-now-valued-at-183-billion | https://www.npr.org/2025/09/05/nx-s1-5529404/anthropic-settlement-authors-copyright-ai
+
+- **More crypto IPOs are coming to Wall Street.** Sol Strategies: https://decrypt.co/338337/solana-treasury-company-sol-strategies-begin-trading-nasdaq | Gemini filed to go public on Nasdaq. https://techcrunch.com/2025/08/15/winklevoss-twins-crypto-company-gemini-files-for-ipo/
+
+- Dormant wallet from ether's long-ago ICO "wakes up," stakes $645M in tokens. https://finance.yahoo.com/news/ethereum-ico-whale-awakens-stakes-165630858.html | https://decrypt.co/338287/ethereum-ico-whale-stakes-645-million-eth
+
+- Major sports streaming/bootlegging service shut down: https://www.nytimes.com/athletic/6591670/2025/09/03/streameast-worlds-largest-illegal-sports-streaming-platform-shut-down-in-sting/
+
+- Undersea cables cut in the Red Sea, causing internet outages for some users in the region. https://www.yahoo.com/news/articles/undersea-cables-cut-red-sea-045755796.html
 
 ### Market Snapshot
 
@@ -88,15 +98,21 @@
 
 ### Looking Ahead
 
-- TK
-- TK
-- TK
+- SEC and CFTC looking to "harmonize" crypto regulation in the U.S. https://www.theblock.co/post/369625/sec-cftc-seek-to-harmonize-on-defi-perps-contracts-and-more-plan-roundtable-later-this-month | New Senate bill would formalize coordination between the two watchdog agencies. https://www.theblock.co/post/369716/senate-market-structure-bill-draft-proposes-sec-cftc-joint-committee-to-end-crypto-turf-wars
+
+- LINEA coming Sept. 10 https://decrypt.co/338327/linea-everything-need-know-ethereum-layer-2-network-airdrop-token
+
+- AI could be on the verge of emotional intelligence, according to two new research papers. https://decrypt.co/338279/ai-biggest-upgrade-yet-emotional-intelligence
+
+- Gen Z is laughing off the possibility of an AI-driven "jobs apocalypse." https://www.yahoo.com/news/articles/gen-z-laughing-face-ai-123000930.html
+
+- Stanford prof is giving in-person written tests: https://www.yahoo.com/news/articles/stanford-computer-science-professor-went-093500264.html
 
 ### Odds & Ends
 
-- Burning Man murder followup: Investigation getting really difficult as everyone packs up and heads home from the playa. <!-- Link TK -->
+- Burning Man murder followup: https://www.hollywoodreporter.com/news/general-news/burning-man-homicide-vadim-kruglov-russian-1236361274/ | https://www.sfchronicle.com/entertainment/article/burning-man-homicide-victim-father-21033160.php
 
-- TK
+- ([The Washington Post](https://www.washingtonpost.com/opinions/2025/08/26/matcha-shortage-green-tea-japan/)) The matcha shortage traces back to a Japanese warlord.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
