Edits to news summaries

--- a/2025/2025-09-07-wir.md
+++ b/2025/2025-09-07-wir.md
@@ -1,8 +1,8 @@
 # TKTK
 ## TKTK
 
-![Stock photo of a man walking by a sign reading "no jobs"](https://w3w.news/img/hennie-stander-unsplash-3000.jpg)
-*Photo by [Hennie Stander](https://unsplash.com/@henniestander) via Unsplash.*
+![A lone tangerine against an aqua-colored background](https://w3w.news/img/mae-wu-1920.jpg)
+*Photo illustration by Mae Wu via Unsplash*
 
 <hr>
 
@@ -16,29 +16,25 @@
 
 **Lead item goes here.** Yadda yadda yadda.
 
+- Polymarket hits ATH, eyes return to the U.S. https://www.theblock.co/post/369682/polymarket-hits-all-time-high-for-new-markets-created-as-platform-eyes-us-return ([]())
+
+- SEC and CFTC looking to "harmonize" crypto regulation in the U.S. https://www.theblock.co/post/369625/sec-cftc-seek-to-harmonize-on-defi-perps-contracts-and-more-plan-roundtable-later-this-month | New Senate bill would formalize coordination between the two watchdog agencies. https://www.theblock.co/post/369716/senate-market-structure-bill-draft-proposes-sec-cftc-joint-committee-to-end-crypto-turf-wars ([]())
+
+- **More crypto IPOs are coming to Wall Street.** Sol Strategies: https://decrypt.co/338337/solana-treasury-company-sol-strategies-begin-trading-nasdaq | Gemini filed to go public on Nasdaq. https://techcrunch.com/2025/08/15/winklevoss-twins-crypto-company-gemini-files-for-ipo/ ([]())
+
+- WLFI token debuts. <!--Link TK  | Bloomberg says Trump family made $1.3B on crypto in just a few weeks: https://news.google.com/read/CBMitAFBVV95cUxPVnNqUzRXb2k1OTc5a25xemlhRV81NFdiSTNSZVpjRkY5b2cweGl3cEs1S3NGR2tQSDQ4dXduc1pvMzFuX0dpTWN6a3JfVmJsQlBCYTVwYWItTDhsRk4xcXNZbEU1ZUZwVWZsTVZGTlAyV3Q2WmVoTVV4N1N5TkFybDQ2Y0RZVlFyNU9GNFVfZVM4RkFXcEViekZBMHdTQVd3TjNmYm1Xb2MxYlM3SFl6eERROTk?hl=en-US&gl=US&ceid=US%3Aen | Sun says his WLFI tokens are being frozen: https://news.google.com/read/CBMifEFVX3lxTE5majlndzFhQXEyVVVWMU9SNmpMMU5ibUoxaUNLNEk3VkZSTVZpazh5VmxOOWcweWFlOE9qZDBUM2JZcjYtYXRGczVhRndGOWo2bUhZdTY2NUNMcF9ndXA2SGYxckJaRDF2SDdFZ0JZWFM4V1dFd20wMnRhbzA?hl=en-US&gl=US&ceid=US%3Aen | Trump Media buying CRO tokens: https://www.theblock.co/post/369646/trump-media-closes-deal-to-buy-684-million-cro-tokens
+
 ### Five Things: Aug. 31 to Sept. 6, 2025
 
-*The week's top headlines about emerging technologies and trends reshaping the web:*
+- Stablecoin transfers hit a record in August. ([CoinDesk](https://finance.yahoo.com/news/stablecoin-retail-transfers-break-records-120000887.html))  
 
-- WLFI token debuts. <!--Link TK --> | Bloomberg says Trump family made $1.3B on crypto in just a few weeks: https://news.google.com/read/CBMitAFBVV95cUxPVnNqUzRXb2k1OTc5a25xemlhRV81NFdiSTNSZVpjRkY5b2cweGl3cEs1S3NGR2tQSDQ4dXduc1pvMzFuX0dpTWN6a3JfVmJsQlBCYTVwYWItTDhsRk4xcXNZbEU1ZUZwVWZsTVZGTlAyV3Q2WmVoTVV4N1N5TkFybDQ2Y0RZVlFyNU9GNFVfZVM4RkFXcEViekZBMHdTQVd3TjNmYm1Xb2MxYlM3SFl6eERROTk?hl=en-US&gl=US&ceid=US%3Aen | Sun says his WLFI tokens are being frozen: https://news.google.com/read/CBMifEFVX3lxTE5majlndzFhQXEyVVVWMU9SNmpMMU5ibUoxaUNLNEk3VkZSTVZpazh5VmxOOWcweWFlOE9qZDBUM2JZcjYtYXRGczVhRndGOWo2bUhZdTY2NUNMcF9ndXA2SGYxckJaRDF2SDdFZ0JZWFM4V1dFd20wMnRhbzA?hl=en-US&gl=US&ceid=US%3Aen | Trump Media buying CRO tokens: https://www.theblock.co/post/369646/trump-media-closes-deal-to-buy-684-million-cro-tokens
+- Dormant wallet from ether's long-ago ICO "wakes up," stakes $645M in tokens. ([Decrypt](https://decrypt.co/338287/ethereum-ico-whale-stakes-645-million-eth))
 
-- WSJ: Stock market is now as expensive relative to companies' actual sales as it was in the first dotcom bubble. <!--Link TK -->
+- Anthropic raises a round and settles a lawsuit with book authors ([NPR](https://www.npr.org/2025/09/05/nx-s1-5529404/anthropic-settlement-authors-copyright-ai))
 
-- S&P adds Robinhood, not Strategy, to the 500. Hmmm... https://decrypt.co/338344/robinhood-set-to-join-sp-500-as-bitcoin-giant-strategy-misses-out
+- WSJ: Stock market is now as expensive relative to companies' actual sales as it was in the first dotcom bubble. ([Wall Street Journal](https://www.wsj.com/finance/stocks/stock-market-valuation-highs-ac291e72?st=GaebaK&reflink=desktopwebshare_permalink))
 
-- Stablecoin transfers hit a record in August: https://finance.yahoo.com/news/stablecoin-retail-transfers-break-records-120000887.html | Tether looking to add gold to its books. https://www.theblock.co/post/369668/tether-weighing-gold-investment-surprises-mining-execs
-
-- Polymarket hits ATH, eyes return to the U.S. https://www.theblock.co/post/369682/polymarket-hits-all-time-high-for-new-markets-created-as-platform-eyes-us-return
-
-- Anthropic raises a round and settles a lawsuit with book authors:  https://www.theverge.com/anthropic/769179/anthropic-is-now-valued-at-183-billion | https://www.npr.org/2025/09/05/nx-s1-5529404/anthropic-settlement-authors-copyright-ai
-
-- **More crypto IPOs are coming to Wall Street.** Sol Strategies: https://decrypt.co/338337/solana-treasury-company-sol-strategies-begin-trading-nasdaq | Gemini filed to go public on Nasdaq. https://techcrunch.com/2025/08/15/winklevoss-twins-crypto-company-gemini-files-for-ipo/
-
-- Dormant wallet from ether's long-ago ICO "wakes up," stakes $645M in tokens. https://finance.yahoo.com/news/ethereum-ico-whale-awakens-stakes-165630858.html | https://decrypt.co/338287/ethereum-ico-whale-stakes-645-million-eth
-
-- Major sports streaming/bootlegging service shut down: https://www.nytimes.com/athletic/6591670/2025/09/03/streameast-worlds-largest-illegal-sports-streaming-platform-shut-down-in-sting/
-
-- Undersea cables cut in the Red Sea, causing internet outages for some users in the region. https://www.yahoo.com/news/articles/undersea-cables-cut-red-sea-045755796.html
+- **Nevada police identified** the man recently [murdered at Burning Man](https://www.hollywoodreporter.com/news/general-news/burning-man-homicide-vadim-kruglov-russian-1236361274/) as Vadim Kruglov, a 37-year-old Russian national. Friends have launched a [GoFundMe campaign](https://www.gofundme.com/f/burning-man-2025-in-loving-memory-of-vadim-kruglov) to repatriate his body to his hometown of Omsk, Russia. The Pershing County Sheriff’s Office is asking anyone with information related to Kruglov's death to contact investigators at 775-273-2641, referencing case #25-318.
 
 ### Market Snapshot
 
@@ -58,39 +54,37 @@
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td>$TK</td>
-     <td>-TK%</td>
-     <td>+TK%</td>
+     <td>$111,609.98</td>
+     <td>+3.4%</td>
+     <td>+18.9%</td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td>TK</td>
-     <td>-TK%</td>
-     <td>+TK%</td>
+     <td>23,652.44</td>
+     <td>+1%</td>
+     <td>+12.6%</td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td>$TK/oz</td>
-     <td>+TK%</td>
-     <td>+TK%</td>
+     <td>$3,653.30/oz</td>
+     <td>+3.9%</td>
+     <td>+39%</td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td>TK</td>
-     <td>+TK%</td>
-     <td>-TK%</td>
+     <td>97.74</td>
+     <td>-0.1%</td>
+     <td>-9.9%</td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td>TK%</td>
-     <td>-TK</td>
-     <td>-TK</td>
-
-
+     <td>4.086%</td>
+     <td>-0.141</td>
+     <td>-0.487</td>
    </tr>
 
 </tbody>
@@ -98,21 +92,17 @@
 
 ### Looking Ahead
 
-- SEC and CFTC looking to "harmonize" crypto regulation in the U.S. https://www.theblock.co/post/369625/sec-cftc-seek-to-harmonize-on-defi-perps-contracts-and-more-plan-roundtable-later-this-month | New Senate bill would formalize coordination between the two watchdog agencies. https://www.theblock.co/post/369716/senate-market-structure-bill-draft-proposes-sec-cftc-joint-committee-to-end-crypto-turf-wars
+- Ethereum: LINEA coming Sept. 10 ([Decrypt](https://decrypt.co/338327/linea-everything-need-know-ethereum-layer-2-network-airdrop-token))
 
-- LINEA coming Sept. 10 https://decrypt.co/338327/linea-everything-need-know-ethereum-layer-2-network-airdrop-token
+- Tether looking to add gold to its books. ([The Block](https://www.theblock.co/post/369668/tether-weighing-gold-investment-surprises-mining-execs))
 
-- AI could be on the verge of emotional intelligence, according to two new research papers. https://decrypt.co/338279/ai-biggest-upgrade-yet-emotional-intelligence
-
-- Gen Z is laughing off the possibility of an AI-driven "jobs apocalypse." https://www.yahoo.com/news/articles/gen-z-laughing-face-ai-123000930.html
-
-- Stanford prof is giving in-person written tests: https://www.yahoo.com/news/articles/stanford-computer-science-professor-went-093500264.html
+- AI could be on the verge of emotional intelligence, according to two new research papers. ([Decrypt](https://decrypt.co/338279/ai-biggest-upgrade-yet-emotional-intelligence))
 
 ### Odds & Ends
 
-- Burning Man murder followup: https://www.hollywoodreporter.com/news/general-news/burning-man-homicide-vadim-kruglov-russian-1236361274/ | https://www.sfchronicle.com/entertainment/article/burning-man-homicide-victim-father-21033160.php
+- **Egyptian authorities raided and shut down Streameast**, believed to be the internet's largest platform for pirating sports broadcasts. ([Variety](https://news.google.com/read/CBMinAFBVV95cUxOaTROdy1VaDdZdFFpanVfNUstc3RXM1RBTTVCNzBzRzZvU21mQURGYzhKZVROa19CV3pNNDRYcDVLTE9vR2JfWUt3R2pweURmdU1tbENCcDRxNGs5a2I4NTZzVGZiSWJ0Zng0dnRlQ1JpZGUwbDFaa1dqUmQ1aFIzQUhRYUJ6aWNiUFFRcXVpQWVoWU4xUkhZb0VxY0Q?hl=en-US&gl=US&ceid=US%3Aen))
 
-- ([The Washington Post](https://www.washingtonpost.com/opinions/2025/08/26/matcha-shortage-green-tea-japan/)) The matcha shortage traces back to a Japanese warlord.
+- **Author Samuel Hawley** says we owe a 16th-century Japanese warlord some of the thanks for the current [global matcha shortage](https://wapo.st/3JRO3Mv).
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
