Adding draft news summaries by Leo/Llama 3.1 8B

--- a/2025/2025-09-07-wir.md
+++ b/2025/2025-09-07-wir.md
@@ -24,15 +24,25 @@
 
 - WLFI token debuts. <!--Link TK  | Bloomberg says Trump family made $1.3B on crypto in just a few weeks: https://news.google.com/read/CBMitAFBVV95cUxPVnNqUzRXb2k1OTc5a25xemlhRV81NFdiSTNSZVpjRkY5b2cweGl3cEs1S3NGR2tQSDQ4dXduc1pvMzFuX0dpTWN6a3JfVmJsQlBCYTVwYWItTDhsRk4xcXNZbEU1ZUZwVWZsTVZGTlAyV3Q2WmVoTVV4N1N5TkFybDQ2Y0RZVlFyNU9GNFVfZVM4RkFXcEViekZBMHdTQVd3TjNmYm1Xb2MxYlM3SFl6eERROTk?hl=en-US&gl=US&ceid=US%3Aen | Sun says his WLFI tokens are being frozen: https://news.google.com/read/CBMifEFVX3lxTE5majlndzFhQXEyVVVWMU9SNmpMMU5ibUoxaUNLNEk3VkZSTVZpazh5VmxOOWcweWFlOE9qZDBUM2JZcjYtYXRGczVhRndGOWo2bUhZdTY2NUNMcF9ndXA2SGYxckJaRDF2SDdFZ0JZWFM4V1dFd20wMnRhbzA?hl=en-US&gl=US&ceid=US%3Aen | Trump Media buying CRO tokens: https://www.theblock.co/post/369646/trump-media-closes-deal-to-buy-684-million-cro-tokens
 
+<!-- Some old w3w clips that might be relevant... -->
+
+- Is this your crypto president America? (9 March '25) https://peteramckay.medium.com/is-this-your-crypto-president-america-8d33875a7940
+
+- July '24: https://blog.pmckay.com/posts/20240721-crypto-goes-gop.html
+
+- May '24: The war on crypto backfired. https://blog.pmckay.com/posts/20240526-war-on-crypto-backfired.html
+
+- Bitcoiners strike back at Warren (March '24) https://mailchi.mp/d0b01c57402c/web3-weekly-20342776
+
 ### Five Things: Aug. 31 to Sept. 6, 2025
 
-- Stablecoin transfers hit a record in August. ([CoinDesk](https://finance.yahoo.com/news/stablecoin-retail-transfers-break-records-120000887.html))  
+- Stablecoin adoption has reached new heights in 2025, with transaction volumes through August exceeding last year's total and retail-sized transfers exceeding $5.8 billion in August alone. The shift in activity among blockchains has seen Binance Smart Chain (BSC) emerge as the top choice for retail users, capturing nearly 40% of retail stablecoin activity, while Ethereum has seen a significant rise in retail segment transactions, particularly on its mainnet. ([CoinDesk](https://finance.yahoo.com/news/stablecoin-retail-transfers-break-records-120000887.html)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- Dormant wallet from ether's long-ago ICO "wakes up," stakes $645M in tokens. ([Decrypt](https://decrypt.co/338287/ethereum-ico-whale-stakes-645-million-eth))
+- A large Ethereum whale has moved $645 million worth of funds from three wallets to a staking service, onchain data shows, but still holds $1.1 billion in ETH. This move comes as investor optimism about Ethereum has soared following recent regulatory developments and growing institutional interest in the asset. ([Decrypt](https://decrypt.co/338287/ethereum-ico-whale-stakes-645-million-eth)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- Anthropic raises a round and settles a lawsuit with book authors ([NPR](https://www.npr.org/2025/09/05/nx-s1-5529404/anthropic-settlement-authors-copyright-ai))
+- Anthropic AI has agreed to pay $1.5 billion to settle a copyright infringement lawsuit brought by a group of authors, marking the first-of-its-kind settlement in the AI era. The settlement, which will compensate authors around $3,000 for each of the estimated 500,000 books covered, suggests a shift towards a more legitimate and sustainable ecosystem where creators are compensated for their work. ([NPR](https://www.npr.org/2025/09/05/nx-s1-5529404/anthropic-settlement-authors-copyright-ai)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- WSJ: Stock market is now as expensive relative to companies' actual sales as it was in the first dotcom bubble. ([Wall Street Journal](https://www.wsj.com/finance/stocks/stock-market-valuation-highs-ac291e72?st=GaebaK&reflink=desktopwebshare_permalink))
+- The S&P 500 has reached a record-high price-to-sales ratio, with the index trading at 3.23 times sales, largely driven by the dominance of a few large technology companies such as Nvidia and Microsoft. While some investors believe these companies are worth the high valuations, others are concerned that the market's concentration in a few expensive stocks makes it more susceptible to a downturn. ([Wall Street Journal](https://www.wsj.com/finance/stocks/stock-market-valuation-highs-ac291e72?st=GaebaK&reflink=desktopwebshare_permalink)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
 - **Nevada police identified** the man recently [murdered at Burning Man](https://www.hollywoodreporter.com/news/general-news/burning-man-homicide-vadim-kruglov-russian-1236361274/) as Vadim Kruglov, a 37-year-old Russian national. Friends have launched a [GoFundMe campaign](https://www.gofundme.com/f/burning-man-2025-in-loving-memory-of-vadim-kruglov) to repatriate his body to his hometown of Omsk, Russia. The Pershing County Sheriff’s Office is asking anyone with information related to Kruglov's death to contact investigators at 775-273-2641, referencing case #25-318.
 
@@ -92,11 +102,11 @@
 
 ### Looking Ahead
 
-- Ethereum: LINEA coming Sept. 10 ([Decrypt](https://decrypt.co/338327/linea-everything-need-know-ethereum-layer-2-network-airdrop-token))
+- The Linea Association will distribute the LINEA token, the native token of the Ethereum layer-2 network, on September 10, with a total supply of 72 billion tokens and a buyback and burn mechanism to maintain a stable supply. The token will be distributed to early adopters, ecosystem participants, and Consensys, with 10% going to early users, 75% to the ecosystem, and 15% to Consensys, which has locked up its tokens for five years. ([Decrypt](https://decrypt.co/338327/linea-everything-need-know-ethereum-layer-2-network-airdrop-token)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- Tether looking to add gold to its books. ([The Block](https://www.theblock.co/post/369668/tether-weighing-gold-investment-surprises-mining-execs))
+- Tether, the world's largest stablecoin supplier, is reportedly considering a significant increase in its exposure to gold, with discussions underway to invest in the "entire gold supply chain." This move has surprised the conservative gold mining sector, with some questioning whether the unconventional newcomer will succeed in its gold strategy. ([The Block](https://www.theblock.co/post/369668/tether-weighing-gold-investment-surprises-mining-execs)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- AI could be on the verge of emotional intelligence, according to two new research papers. ([Decrypt](https://decrypt.co/338279/ai-biggest-upgrade-yet-emotional-intelligence))
+- Researchers have made significant strides in developing emotionally intelligent AI, with two recent studies showcasing agents that can be primed with distinct personalities and adapt emotional strategies in real-time. This emerging technology has the potential to create more human-like interactions, but also raises concerns about accountability and the potential for manipulation. ([Decrypt](https://decrypt.co/338279/ai-biggest-upgrade-yet-emotional-intelligence)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
 ### Odds & Ends
 
