--- a/2025/2025-09-07-wir.md
+++ b/2025/2025-09-07-wir.md
@@ -14,35 +14,45 @@
 
 <hr>
 
-**Lead item goes here.** Yadda yadda yadda.
+**The second Trump administration** continues to be a surprisingly mixed bag for the crypto industry, whose donors heavily backed the president's campaign in 2024.
 
-- Polymarket hits ATH, eyes return to the U.S. https://www.theblock.co/post/369682/polymarket-hits-all-time-high-for-new-markets-created-as-platform-eyes-us-return ([]())
+As has been the case since the new term's [early days](https://peteramckay.medium.com/is-this-your-crypto-president-america-8d33875a7940), the latest wins for the industry are mostly in the regulatory arena:
 
-- SEC and CFTC looking to "harmonize" crypto regulation in the U.S. https://www.theblock.co/post/369625/sec-cftc-seek-to-harmonize-on-defi-perps-contracts-and-more-plan-roundtable-later-this-month | New Senate bill would formalize coordination between the two watchdog agencies. https://www.theblock.co/post/369716/senate-market-structure-bill-draft-proposes-sec-cftc-joint-committee-to-end-crypto-turf-wars ([]())
+- **The Securities and Exchange Commission and the Commodity Futures Trading Commission** jointly announced a conference Sept. 29 to better ["harmonize"](https://www.theblock.co/post/369625/sec-cftc-seek-to-harmonize-on-defi-perps-contracts-and-more-plan-roundtable-later-this-month) their oversight of crypto. On Capitol hill, the latest draft of the Senate's crypto bill proposes creating a standing committee to [avoid turf wars](https://www.theblock.co/post/369716/senate-market-structure-bill-draft-proposes-sec-cftc-joint-committee-to-end-crypto-turf-wars) between the SEC and CFTC over crypto regulation.
 
-- **More crypto IPOs are coming to Wall Street.** Sol Strategies: https://decrypt.co/338337/solana-treasury-company-sol-strategies-begin-trading-nasdaq | Gemini filed to go public on Nasdaq. https://techcrunch.com/2025/08/15/winklevoss-twins-crypto-company-gemini-files-for-ipo/ ([]())
+- **Polymarket,** a popular on-chain prediction platform, said it is [planning to re-enter the U.S. market](https://www.theblock.co/post/369682/polymarket-hits-all-time-high-for-new-markets-created-as-platform-eyes-us-return) after receiving a no-action letter from the CFTC, meaning that the agency doesn't intend to pursue any encorcement actions against its prediction contracts.
 
-- WLFI token debuts. <!--Link TK  | Bloomberg says Trump family made $1.3B on crypto in just a few weeks: https://news.google.com/read/CBMitAFBVV95cUxPVnNqUzRXb2k1OTc5a25xemlhRV81NFdiSTNSZVpjRkY5b2cweGl3cEs1S3NGR2tQSDQ4dXduc1pvMzFuX0dpTWN6a3JfVmJsQlBCYTVwYWItTDhsRk4xcXNZbEU1ZUZwVWZsTVZGTlAyV3Q2WmVoTVV4N1N5TkFybDQ2Y0RZVlFyNU9GNFVfZVM4RkFXcEViekZBMHdTQVd3TjNmYm1Xb2MxYlM3SFl6eERROTk?hl=en-US&gl=US&ceid=US%3Aen | Sun says his WLFI tokens are being frozen: https://news.google.com/read/CBMifEFVX3lxTE5majlndzFhQXEyVVVWMU9SNmpMMU5ibUoxaUNLNEk3VkZSTVZpazh5VmxOOWcweWFlOE9qZDBUM2JZcjYtYXRGczVhRndGOWo2bUhZdTY2NUNMcF9ndXA2SGYxckJaRDF2SDdFZ0JZWFM4V1dFd20wMnRhbzA?hl=en-US&gl=US&ceid=US%3Aen | Trump Media buying CRO tokens: https://www.theblock.co/post/369646/trump-media-closes-deal-to-buy-684-million-cro-tokens
+- **Lighter regulation** has also emboldened several crypto companies this year to make traditional stock offerings on Wall Street exchanges. The latest: Shares of Solana treasury company SOL Strategies are [expected to begin trading](https://decrypt.co/338337/solana-treasury-company-sol-strategies-begin-trading-nasdaq) on Nasdaq this week. Separately, the Winklevoss brothers' Gemini Space Station, a crypto exchange and custodian firm, [registered](https://techcrunch.com/2025/08/15/winklevoss-twins-crypto-company-gemini-files-for-ipo/) with the SEC on Friday to do an initial public offering (IPO) of shares soon, pending the regulator's approval.
 
-<!-- Some old w3w clips that might be relevant... -->
+**On a less promising note,** however, there are Trump's increasingly erratic economic policies and constant shirking of free-market principles traditionally associated with conservative administrations.
 
-- Is this your crypto president America? (9 March '25) https://peteramckay.medium.com/is-this-your-crypto-president-america-8d33875a7940
+There's also the Trump family's incessant self-dealing, much of it in the crypto arena. We got another reminder of that on Monday, when the governance token for Trump-backed World Liberty Financial [began trading](https://finance.yahoo.com/news/trump-backed-world-liberty-ethereum-152557637.html). The tokens immediately leapt in value, but by Thursday they had already fallen [50% off their highs](https://finance.yahoo.com/news/trump-backed-world-liberty-token-163545443.html), no doubt costing a lot of late-stage investors significant money.
 
-- July '24: https://blog.pmckay.com/posts/20240721-crypto-goes-gop.html
+But for the early investors, it's all been awesome. On Saturday, Bloomberg News reported that the Trump family had [raked in $1.3 billion](https://news.google.com/read/CBMitAFBVV95cUxPVnNqUzRXb2k1OTc5a25xemlhRV81NFdiSTNSZVpjRkY5b2cweGl3cEs1S3NGR2tQSDQ4dXduc1pvMzFuX0dpTWN6a3JfVmJsQlBCYTVwYWItTDhsRk4xcXNZbEU1ZUZwVWZsTVZGTlAyV3Q2WmVoTVV4N1N5TkFybDQ2Y0RZVlFyNU9GNFVfZVM4RkFXcEViekZBMHdTQVd3TjNmYm1Xb2MxYlM3SFl6eERROTk?hl=en-US&gl=US&ceid=US%3Aen) in just a few weeks from just two crypto ventures — World Liberty and the mining firm American Bitcoin.
 
-- May '24: The war on crypto backfired. https://blog.pmckay.com/posts/20240526-war-on-crypto-backfired.html
+As someone who's previously done marketing work for several crypto projects, I have to say I'm concerned the industry has wandered into a reputational minefield here that's going to be very prolonged and painful to deal with.
 
-- Bitcoiners strike back at Warren (March '24) https://mailchi.mp/d0b01c57402c/web3-weekly-20342776
+To put it bluntly, the juxtaposition this week of the WLFI token launch (which enriched the Trumps) and [surprisingly weak jobs data](https://www.yahoo.com/news/articles/august-jobs-report-u-added-141749974.html) for the U.S. economy (which impoverishes a lot of everyday Americans) is striking.
+
+A lot of the general public probably hasn't quite connected those dots yet, but as a similar pattern repeats in the months ahead, they eventually will. Trump's protectionist, anxiety-inducing policies and general chaos will continue to take an economic toll. And he will keep lining his pocket. So there is yet ample time for people to catch on.
+
+Some portion of the ire that results will likely be directed at the crypto industry writ large. I don't know if we're prepared for that, frankly.
+
+To put it a different way: During the Biden administration, the most notorious bad actor in the crypto space as far as the general public was concerned was FTX's Sam Bankman-Fried.
+
+After his company collapsed in late 2022, Bankman-Fried cast quite a long shadow over the entire industry. For [normies](https://www.urbandictionary.com/define.php?term=normie), he effectively became the face of crypto for a long time, in the worst possible way. This in turn had a very real effect on user adoption, product launches, fundraising, and so on.
+
+By the end of the second Trump administration, *the president himself* could very well end up playing that role. If so, the public fallout for the entire crypto industry could make FTX's collapse look like a day at the beach near FTX's old headquarters in the Bahamas.  
 
 ### Five Things: Aug. 31 to Sept. 6, 2025
 
-- Stablecoin adoption has reached new heights in 2025, with transaction volumes through August exceeding last year's total and retail-sized transfers exceeding $5.8 billion in August alone. The shift in activity among blockchains has seen Binance Smart Chain (BSC) emerge as the top choice for retail users, capturing nearly 40% of retail stablecoin activity, while Ethereum has seen a significant rise in retail segment transactions, particularly on its mainnet. ([CoinDesk](https://finance.yahoo.com/news/stablecoin-retail-transfers-break-records-120000887.html)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **Retail-sized stablecoin transfers** of $250 or less have hit new records this year, including $5.8 billion in activity in August. The torrid volume signals strong adoption among everyday users. ([CoinDesk](https://finance.yahoo.com/news/stablecoin-retail-transfers-break-records-120000887.html))
 
-- A large Ethereum whale has moved $645 million worth of funds from three wallets to a staking service, onchain data shows, but still holds $1.1 billion in ETH. This move comes as investor optimism about Ethereum has soared following recent regulatory developments and growing institutional interest in the asset. ([Decrypt](https://decrypt.co/338287/ethereum-ico-whale-stakes-645-million-eth)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **A large Ethereum whale just moved $645 million** worth of ETH tokens from three long-dormant wallets to a staking service, according to on-chain data. ([Decrypt](https://decrypt.co/338287/ethereum-ico-whale-stakes-645-million-eth))
 
-- Anthropic AI has agreed to pay $1.5 billion to settle a copyright infringement lawsuit brought by a group of authors, marking the first-of-its-kind settlement in the AI era. The settlement, which will compensate authors around $3,000 for each of the estimated 500,000 books covered, suggests a shift towards a more legitimate and sustainable ecosystem where creators are compensated for their work. ([NPR](https://www.npr.org/2025/09/05/nx-s1-5529404/anthropic-settlement-authors-copyright-ai)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **Anthropic agreed to pay $1.5 billion** to settle a copyright infringement lawsuit brought by a group of authors, marking the first such settlement of the AI boom. ([NPR](https://www.npr.org/2025/09/05/nx-s1-5529404/anthropic-settlement-authors-copyright-ai))
 
-- The S&P 500 has reached a record-high price-to-sales ratio, with the index trading at 3.23 times sales, largely driven by the dominance of a few large technology companies such as Nvidia and Microsoft. While some investors believe these companies are worth the high valuations, others are concerned that the market's concentration in a few expensive stocks makes it more susceptible to a downturn. ([Wall Street Journal](https://www.wsj.com/finance/stocks/stock-market-valuation-highs-ac291e72?st=GaebaK&reflink=desktopwebshare_permalink)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **The benchmark S&P 500** is now more expensive relative to its component companies' sales that it was during the 1990s' dotcom bubble. Yikes. ([Wall Street Journal](https://www.wsj.com/finance/stocks/stock-market-valuation-highs-ac291e72?st=GaebaK&reflink=desktopwebshare_permalink))
 
 - **Nevada police identified** the man recently [murdered at Burning Man](https://www.hollywoodreporter.com/news/general-news/burning-man-homicide-vadim-kruglov-russian-1236361274/) as Vadim Kruglov, a 37-year-old Russian national. Friends have launched a [GoFundMe campaign](https://www.gofundme.com/f/burning-man-2025-in-loving-memory-of-vadim-kruglov) to repatriate his body to his hometown of Omsk, Russia. The Pershing County Sheriff’s Office is asking anyone with information related to Kruglov's death to contact investigators at 775-273-2641, referencing case #25-318.
 
@@ -102,11 +112,11 @@
 
 ### Looking Ahead
 
-- The Linea Association will distribute the LINEA token, the native token of the Ethereum layer-2 network, on September 10, with a total supply of 72 billion tokens and a buyback and burn mechanism to maintain a stable supply. The token will be distributed to early adopters, ecosystem participants, and Consensys, with 10% going to early users, 75% to the ecosystem, and 15% to Consensys, which has locked up its tokens for five years. ([Decrypt](https://decrypt.co/338327/linea-everything-need-know-ethereum-layer-2-network-airdrop-token)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **The Linea Network,** a Consensys-backed project designed to extend and scale Ethereum's capabilities as an app platform, is expected to launch this week, including an airdrop of its own token to prospective users. ([Decrypt](https://decrypt.co/338327/linea-everything-need-know-ethereum-layer-2-network-airdrop-token))
 
-- Tether, the world's largest stablecoin supplier, is reportedly considering a significant increase in its exposure to gold, with discussions underway to invest in the "entire gold supply chain." This move has surprised the conservative gold mining sector, with some questioning whether the unconventional newcomer will succeed in its gold strategy. ([The Block](https://www.theblock.co/post/369668/tether-weighing-gold-investment-surprises-mining-execs)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **Tether, the world's largest stablecoin issuer,** is reportedly considering a significant increase in its gold holdings. Such a strategy would represent a decidely old-school way to improve the financial backing of Tether's digital USDT token. ([The Block](https://www.theblock.co/post/369668/tether-weighing-gold-investment-surprises-mining-execs))
 
-- Researchers have made significant strides in developing emotionally intelligent AI, with two recent studies showcasing agents that can be primed with distinct personalities and adapt emotional strategies in real-time. This emerging technology has the potential to create more human-like interactions, but also raises concerns about accountability and the potential for manipulation. ([Decrypt](https://decrypt.co/338279/ai-biggest-upgrade-yet-emotional-intelligence)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **Two new research papers suggest** there have been significant strides in developing emotionally intelligent AI agents, including distinct, consistent personalities for bots depending on their training. ([Decrypt](https://decrypt.co/338279/ai-biggest-upgrade-yet-emotional-intelligence))
 
 ### Odds & Ends
 
